Fixed issue with skills section not showing up

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -17,7 +17,6 @@
 
 .portfolio-wrapper,
 .contact-wrapper,
-.skills-wrapper,
 .heading-wrapper {
     padding: 0 100px;
 }
